--- a/OverTheRainbow/OverTheRainbow/Base.lproj/WritingLetter.storyboard
+++ b/OverTheRainbow/OverTheRainbow/Base.lproj/WritingLetter.storyboard
@@ -180,8 +180,57 @@
                     <view key="view" contentMode="scaleToFill" id="1X0-kh-RaT">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XbJ-Q7-GBC">
+                                <rect key="frame" x="20" y="391" width="350" height="59"/>
+                                <color key="backgroundColor" red="0.95934301609999995" green="0.95799666640000003" blue="0.91491341589999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="59" id="qfO-ES-R9o"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="h8c-yM-QCp">
+                                <rect key="frame" x="20" y="471" width="350" height="254"/>
+                                <color key="backgroundColor" red="0.95934301609999995" green="0.95799666640000003" blue="0.91491341589999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="254" id="Z9I-1H-A0y"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="umS-bL-HOS">
+                                <rect key="frame" x="325" y="747" width="45" height="22"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mGg-CZ-nWx">
+                                <rect key="frame" x="20" y="116" width="350" height="255"/>
+                                <color key="backgroundColor" red="0.92443710570000004" green="0.92525351050000004" blue="0.84697872399999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.92443710570000004" green="0.92525351050000004" blue="0.84697872399999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="255" id="UcH-ew-ujC"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="wK2-Dh-nr3"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.95934301609999995" green="0.95799666640000003" blue="0.91491341589999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="umS-bL-HOS" firstAttribute="top" secondItem="h8c-yM-QCp" secondAttribute="bottom" constant="22" id="8ks-u9-5RB"/>
+                            <constraint firstItem="mGg-CZ-nWx" firstAttribute="leading" secondItem="wK2-Dh-nr3" secondAttribute="leading" constant="20" id="ARD-Ze-Lo7"/>
+                            <constraint firstItem="h8c-yM-QCp" firstAttribute="trailing" secondItem="mGg-CZ-nWx" secondAttribute="trailing" id="AcX-q3-x5X"/>
+                            <constraint firstItem="mGg-CZ-nWx" firstAttribute="centerX" secondItem="1X0-kh-RaT" secondAttribute="centerX" id="L1m-LE-LOo"/>
+                            <constraint firstItem="h8c-yM-QCp" firstAttribute="leading" secondItem="mGg-CZ-nWx" secondAttribute="leading" id="S9P-Vr-5mQ"/>
+                            <constraint firstItem="h8c-yM-QCp" firstAttribute="trailing" secondItem="umS-bL-HOS" secondAttribute="trailing" id="bbQ-xI-f6V"/>
+                            <constraint firstItem="h8c-yM-QCp" firstAttribute="trailing" secondItem="XbJ-Q7-GBC" secondAttribute="trailing" id="d4f-Eh-Mhz"/>
+                            <constraint firstItem="h8c-yM-QCp" firstAttribute="leading" secondItem="XbJ-Q7-GBC" secondAttribute="leading" id="eQf-Xu-kFy"/>
+                            <constraint firstItem="mGg-CZ-nWx" firstAttribute="top" secondItem="wK2-Dh-nr3" secondAttribute="top" constant="28" id="jtv-f0-xqi"/>
+                            <constraint firstItem="umS-bL-HOS" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="wK2-Dh-nr3" secondAttribute="leading" symbolic="YES" id="kMW-lB-P69"/>
+                            <constraint firstItem="h8c-yM-QCp" firstAttribute="top" secondItem="XbJ-Q7-GBC" secondAttribute="bottom" constant="21" id="obn-w9-AqL"/>
+                            <constraint firstItem="XbJ-Q7-GBC" firstAttribute="top" secondItem="mGg-CZ-nWx" secondAttribute="bottom" constant="20" id="pqd-5j-ZUj"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="E7R-IJ-AHR">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="pencil.circle" catalog="system" id="AdJ-Gz-91X">
@@ -190,6 +239,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="selectedLetterNavBar" destination="E7R-IJ-AHR" id="t5N-T2-LZ6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ppv-5W-U7n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -222,25 +274,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qhZ-uV-tDR">
-                                <rect key="frame" x="16" y="355" width="350" height="59"/>
-                                <color key="backgroundColor" red="0.95934301609999995" green="0.95799666640000003" blue="0.91491341589999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="59" id="3Gc-ij-lre"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TiR-2L-hiZ">
-                                <rect key="frame" x="16" y="435" width="350" height="254"/>
-                                <color key="backgroundColor" red="0.95934301609999995" green="0.95799666640000003" blue="0.91491341589999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="254" id="zqP-AE-TkZ"/>
-                                </constraints>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mFv-Er-Wds">
                                 <rect key="frame" x="321" y="711" width="45" height="22"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
@@ -252,8 +285,27 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain"/>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qhZ-uV-tDR">
+                                <rect key="frame" x="20" y="355" width="350" height="59"/>
+                                <color key="backgroundColor" red="0.95934301609999995" green="0.95799666640000003" blue="0.91491341589999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="59" id="3Gc-ij-lre"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TiR-2L-hiZ">
+                                <rect key="frame" x="20" y="435" width="350" height="254"/>
+                                <color key="backgroundColor" red="0.95934301609999995" green="0.95799666640000003" blue="0.91491341589999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="254" id="zqP-AE-TkZ"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oCd-h1-seR">
-                                <rect key="frame" x="16" y="80" width="350" height="255"/>
+                                <rect key="frame" x="20" y="80" width="350" height="255"/>
                                 <color key="backgroundColor" red="0.92443710570000004" green="0.92525351050000004" blue="0.84697872399999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.92443710570000004" green="0.92525351050000004" blue="0.84697872399999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -269,16 +321,17 @@
                             <constraint firstItem="jfN-tU-rFA" firstAttribute="top" secondItem="DRp-gq-X4V" secondAttribute="top" constant="24" id="71t-lh-NVp"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="trailing" secondItem="oCd-h1-seR" secondAttribute="trailing" id="Cu5-X4-vDF"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="trailing" secondItem="qhZ-uV-tDR" secondAttribute="trailing" id="HO4-TT-X6u"/>
-                            <constraint firstItem="DRp-gq-X4V" firstAttribute="trailing" secondItem="TiR-2L-hiZ" secondAttribute="trailing" constant="24" id="XlC-rA-sB0"/>
+                            <constraint firstItem="DRp-gq-X4V" firstAttribute="trailing" secondItem="TiR-2L-hiZ" secondAttribute="trailing" constant="20" id="XlC-rA-sB0"/>
                             <constraint firstAttribute="bottom" secondItem="TiR-2L-hiZ" secondAttribute="bottom" constant="101" id="Xsv-jj-MyA"/>
-                            <constraint firstItem="TiR-2L-hiZ" firstAttribute="trailing" secondItem="mFv-Er-Wds" secondAttribute="trailing" id="e5X-6k-1pN"/>
+                            <constraint firstItem="TiR-2L-hiZ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="mFv-Er-Wds" secondAttribute="trailing" id="e5X-6k-1pN"/>
                             <constraint firstItem="mFv-Er-Wds" firstAttribute="top" secondItem="TiR-2L-hiZ" secondAttribute="bottom" constant="22" id="f95-Q2-qZP"/>
-                            <constraint firstItem="TiR-2L-hiZ" firstAttribute="leading" secondItem="qFH-NE-R3g" secondAttribute="leadingMargin" id="gKe-5o-9Nj"/>
+                            <constraint firstItem="TiR-2L-hiZ" firstAttribute="leading" secondItem="qFH-NE-R3g" secondAttribute="leadingMargin" constant="4" id="gKe-5o-9Nj"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="leading" secondItem="qhZ-uV-tDR" secondAttribute="leading" id="gLX-yY-Dkl"/>
-                            <constraint firstItem="TiR-2L-hiZ" firstAttribute="leading" secondItem="jfN-tU-rFA" secondAttribute="leading" id="jsj-X3-MLN"/>
+                            <constraint firstItem="mFv-Er-Wds" firstAttribute="leading" secondItem="DRp-gq-X4V" secondAttribute="leading" constant="321" id="hk5-X3-4Uc"/>
+                            <constraint firstItem="TiR-2L-hiZ" firstAttribute="leading" secondItem="jfN-tU-rFA" secondAttribute="leading" constant="4" id="jsj-X3-MLN"/>
                             <constraint firstItem="jfN-tU-rFA" firstAttribute="top" secondItem="oCd-h1-seR" secondAttribute="top" id="sRa-O0-49y"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="top" secondItem="qhZ-uV-tDR" secondAttribute="bottom" constant="21" id="wwY-4z-HR6"/>
-                            <constraint firstItem="TiR-2L-hiZ" firstAttribute="trailing" secondItem="jfN-tU-rFA" secondAttribute="trailing" id="ydF-HC-pcu"/>
+                            <constraint firstItem="TiR-2L-hiZ" firstAttribute="trailing" secondItem="jfN-tU-rFA" secondAttribute="trailing" constant="4" id="ydF-HC-pcu"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="AS4-hE-dq2">
@@ -316,9 +369,6 @@
         <image name="square.and.pencil" catalog="system" width="128" height="115"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
