--- a/OverTheRainbow/OverTheRainbow/Screens/heavenView/HeavenView.storyboard
+++ b/OverTheRainbow/OverTheRainbow/Screens/heavenView/HeavenView.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="heavenViewBackground" translatesAutoresizingMaskIntoConstraints="NO" id="6GR-3W-1aw">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="heavenViewBackground" translatesAutoresizingMaskIntoConstraints="NO" id="6GR-3W-1aw">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
