케러셀의 마지막 셀 버그 수정, 네비게이션 뷰 연결 , 짜잘한 UI 수정

--- a/OverTheRainbow/OverTheRainbow/Base.lproj/MainView.storyboard
+++ b/OverTheRainbow/OverTheRainbow/Base.lproj/MainView.storyboard
@@ -116,7 +116,7 @@
                 </tapGestureRecognizer>
                 <tapGestureRecognizer id="p4N-9l-F7s">
                     <connections>
-                        <segue destination="i1x-40-OxG" kind="show" id="h7F-CK-HrG"/>
+                        <segue destination="W2l-z3-mft" kind="show" id="FIG-Bl-yqO"/>
                     </connections>
                 </tapGestureRecognizer>
                 <tapGestureRecognizer id="BpN-se-eWA">
@@ -132,16 +132,27 @@
             </objects>
             <point key="canvasLocation" x="1080" y="49"/>
         </scene>
+        <!--FlowerView-->
+        <scene sceneID="7Ba-MX-fhv">
+            <objects>
+                <viewControllerPlaceholder storyboardName="FlowerView" referencedIdentifier="FlowerView" id="W2l-z3-mft" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="VHp-DO-UA7"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GF2-El-eQT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="575" y="-104"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="cKp-uX-9qp">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YdM-XX-263" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="i1x-40-OxG" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="x8T-aY-qSi">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="꽃뷰 스텁" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z2J-J4-HfV">
-                                <rect key="frame" x="175" y="464.5" width="64" height="21"/>
+                                <rect key="frame" x="175" y="442.5" width="64" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -156,7 +167,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="bEq-Q4-79V"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YdM-XX-263" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="909" y="785"/>
         </scene>
@@ -219,8 +229,8 @@
         <!--HeavenView-->
         <scene sceneID="iMo-cU-YvW">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VtV-nL-RPT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardIdentifier="HeavenView" storyboardName="HeavenView" id="4AM-RE-rFq" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VtV-nL-RPT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1491" y="-623"/>
         </scene>
