--- a/OverTheRainbow/OverTheRainbow/Screens/flowerView/FlowerView.storyboard
+++ b/OverTheRainbow/OverTheRainbow/Screens/flowerView/FlowerView.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Title-->
+        <!--꽃뷰-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController storyboardIdentifier="FlowerView" id="Y6W-OH-hqX" customClass="FlowerViewController" customModule="OverTheRainbow" customModuleProvider="target" sceneMemberID="viewController">
@@ -23,19 +23,18 @@
                                 <color key="backgroundColor" name="backgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="390" id="7dh-yK-Rtq"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="390" id="V2G-WY-60R"/>
                                     <constraint firstAttribute="height" constant="756" id="Yh0-Hy-pOf"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ezc-4z-j0F">
                                     <size key="itemSize" width="210" height="522"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="127" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="InterestCollectionViewCell" id="PR1-2X-bkg" customClass="FlowerCollectionViewCell" customModule="OverTheRainbow" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="100" width="210" height="522"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xhi-xH-mPO">
                                             <rect key="frame" x="0.0" y="0.0" width="210" height="522"/>
                                             <autoresizingMask key="autoresizingMask"/>
@@ -111,14 +110,13 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="aSf-99-Ufr" secondAttribute="trailing" id="OPl-Yf-8t4"/>
                                                 <constraint firstItem="aSf-99-Ufr" firstAttribute="top" secondItem="xhi-xH-mPO" secondAttribute="top" id="Odz-Wt-JeX"/>
                                                 <constraint firstAttribute="bottom" secondItem="aSf-99-Ufr" secondAttribute="bottom" id="TDf-EH-GN8"/>
-                                                <constraint firstItem="aSf-99-Ufr" firstAttribute="leading" secondItem="xhi-xH-mPO" secondAttribute="leading" id="zyk-KY-mzc"/>
+                                                <constraint firstAttribute="trailing" secondItem="aSf-99-Ufr" secondAttribute="trailing" id="Wze-Wa-SRq"/>
+                                                <constraint firstItem="aSf-99-Ufr" firstAttribute="leading" secondItem="xhi-xH-mPO" secondAttribute="leading" id="ov7-yv-vEu"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
-                                            <outlet property="alphaContorl" destination="xhi-xH-mPO" id="TMN-gY-aaf"/>
                                             <outlet property="backgroundLabel" destination="aSf-99-Ufr" id="gsE-3P-GRt"/>
                                             <outlet property="boxLabel" destination="TI3-sQ-TKb" id="NYd-vD-bxM"/>
                                             <outlet property="flowerImageView" destination="bzK-7e-KAQ" id="XOa-NR-Vni"/>
@@ -150,8 +148,9 @@
                             <constraint firstItem="Ov8-21-Gvm" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="YZO-zh-7xd"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="pEr-oV-fkC">
+                    <navigationItem key="navigationItem" title="꽃뷰" id="pEr-oV-fkC" customClass="flowerViewNaviBar" colorLabel="IBBuiltInLabel-Orange">
                         <barButtonItem key="rightBarButtonItem" title="완료" id="E19-og-Rf6">
+                            <color key="tintColor" red="0.29956644770000002" green="0.25532671810000002" blue="0.25483909249999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="takeAFlower:" destination="Y6W-OH-hqX" id="1Lo-jP-XMe"/>
                             </connections>
@@ -159,6 +158,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="Ov8-21-Gvm" id="bc0-UY-sE1"/>
+                        <outlet property="flowerViewNaviBar" destination="pEr-oV-fkC" id="DrW-hi-PuB"/>
                         <outlet property="pagerContorl" destination="0py-0x-2wU" id="Eeh-ZE-Vln"/>
                         <outlet property="takeFlowerlabel" destination="E19-og-Rf6" id="s1u-kC-lqe"/>
                     </connections>
@@ -166,16 +166,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1270.7692307692307" y="44.7867298578199"/>
-        </scene>
-        <!--FlowerView-->
-        <scene sceneID="H0V-3H-qXB">
-            <objects>
-                <viewControllerPlaceholder storyboardName="FlowerView" referencedIdentifier="FlowerView" id="TO0-hL-AOr" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="XWJ-gy-spI"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="I4D-if-b2Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="854" y="-91"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="1bw-0y-cHQ">
@@ -224,7 +214,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="flower4" width="1780" height="1684"/>
+        <image name="flower4" width="91.666664123535156" height="61"/>
         <namedColor name="backgroundColor">
             <color red="0.95686274509803926" green="0.95686274509803926" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
